[package]
name = "advent-of-code-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.7.6"
pest_derive = "2.7.6"
pest_consume = "1.1.3"
anyhow = "1.0.79"
nom = "7.1.3"
itertools = "0.12.1"
fixedbitset = "0.5.1"
rayon = "1.9.0"
strum = { version = "0.26.2", features = ["derive"] }
chumsky = "1.0.0-alpha.7"
num = "0.4.3"
miette = { version = "7.2.0", features = ["fancy"] }
thiserror = "1.0.61"
test-case = "3.3.1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[package.metadata.clippy]
warn = ["pedantic", "nursery", "unwrap_used", "expect_used"]

[lints.clippy]
pedantic = "warn"
nursery = "warn"
